--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "React",
@@ -16,9 +16,14 @@
     "Starter Template",
     "Boilerplate"
   ],
-  "author": "Vishwas",
+  "author": "Alejandro Pacheco",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -30,6 +35,7 @@
     "@babel/preset-typescript": "^7.12.16",
     "@babel/runtime": "^7.13.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/jest": "^27.0.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -47,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.1.0",
     "husky": "4",
+    "jest": "^27.2.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "react-refresh": "^0.9.0",
@@ -69,14 +76,5 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
-  },
-  "main": ".eslintrc.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gopinav/React-TypeScript-Webpack-Starter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/gopinav/React-TypeScript-Webpack-Starter/issues"
-  },
-  "homepage": "https://github.com/gopinav/React-TypeScript-Webpack-Starter#readme"
+  }
 }
